# broomstyx

./: .gitignore  AUTHORS  CMakeLists.txt  config.h.in
cmake/Modules/: FindMKL.cmake
src/: main.cpp
src/BasisFunctions/: Line_P1.cpp  Line_P1.hpp  Line_P2.cpp  Line_P2.hpp  Quadrilateral_P1_2.cpp  Quadrilateral_P1_2.hpp  Quadrilateral_P2_3.cpp  Quadrilateral_P2_3.hpp  Quadrilateral_P2_4.cpp  Quadrilateral_P2_4.hpp  ScalarBasisFunction.cpp  ScalarBasisFunction.hpp  Tetrahedron_P1.cpp  Tetrahedron_P1.hpp  Triangle_P1.cpp  Triangle_P1.hpp  Triangle_P2.cpp  Triangle_P2.hpp
src/Core/: AnalysisModel.cpp  AnalysisModel.hpp  BoundaryCondition.cpp  BoundaryCondition.hpp  Cell.cpp  Cell.hpp  Dof.hpp  DofManager.cpp  DofManager.hpp  DomainManager.cpp  DomainManager.hpp  EvalPoint.hpp  FieldCondition.cpp  FieldCondition.hpp  InitialCondition.cpp  InitialCondition.hpp  LoadStep.cpp  LoadStep.hpp  MaterialManager.cpp  MaterialManager.hpp  Node.cpp  Node.hpp  NumericsManager.cpp  NumericsManager.hpp  ObjectFactory.cpp  ObjectFactory.hpp  OutputManager.cpp  OutputManager.hpp  SolutionManager.cpp  SolutionManager.hpp  TimeData.hpp
src/IntegrationRules/: IntegrationRule.cpp  IntegrationRule.hpp  Legendre_1D.cpp  Legendre_1D.hpp  Legendre_2D_Quad.cpp  Legendre_2D_Quad.hpp  Legendre_2D_Tri.cpp  Legendre_2D_Tri.hpp
src/Materials/: Material.cpp  Material.hpp
src/Math/: RealMatrix.hpp  RealVector.hpp  floatingPointComparison.cpp  floatingPointComparison.hpp  linearAlgebra.cpp  linearAlgebra.hpp
src/MeshReaders/: GmshReader.cpp  GmshReader.hpp  MeshReader.hpp
tests/: Tester.cpp  Tester.hpp  broomstyx_test.cpp  broomstyx_test.hpp  test.hpp  test_RealMartrix.cpp  test_RealMatrix.hpp  test_RealVector.cpp  test_RealVector.hpp  test_linearAlgebra.cpp  test_linearAlgebra.hpp
(+56 files in other folders)
